# ne-leniss

./: .gitignore  README.md  index.html
assets/: index-B7RQq9RA.css  index-B9XBGTlv.css  index-Bq0ek00j.js  index-Br8bIiAG.js  index-C116Kbiz.js  index-C166NuH2.js  index-C7q7ADAq.css  index-CCYGQ7RM.css  index-CWqZzklP.js  index-ChQ49Sgv.css  index-CiukLaue.js  index-_0V0avm_.js
bot/: .env.example  .gitignore  pyproject.toml  railway.toml
bot/ne_leniss/: api.py  auth.py  config.py  db.py  habits.py  main.py  models.py  repository.py  scheduler.py
bot/ne_leniss/handlers/: app.py  habits.py  morning.py  note.py  onboarding.py  plan.py  seed.py  start.py
bot/ne_leniss/services/: streaks.py
docs/: handoff.md  plan.md  spec.md
web/: .env.development  .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: Calendar.tsx  DayModal.tsx  StreakCard.tsx
web/src/lib/: api.ts  mood.ts  tg.ts
web/src/pages/: Home.tsx
